--- a/src/views/pages/class/create.ejs
+++ b/src/views/pages/class/create.ejs
@@ -12,7 +12,7 @@
   <main class="sm:ml-64 p-6">
     <h1 class="text-2xl font-semibold mb-6">Create a New Classroom</h1>
 
-    <div id="classroom" class="bg-background-50 shadow-md rounded-lg p-6 max-w-lg">
+    <div class="bg-background-50 shadow-md rounded-lg p-6 max-w-lg">
       <h2 class="text-xl font-bold mb-4 text-primary-500">Classroom Details</h2>
 
       <div class="mb-4">
@@ -36,18 +36,18 @@
           "alert",
           response.message,
           "success",
-          document.getElementById("classroom"),
+          document.getElementById("create-classroom").parentElement,
           "create-classroom"
         );
         setTimeout(() => {
-          window.location.href = `/classrooms/${response.data._id}`;
+          app.location.redirect(`/classrooms/${response.data._id}`);
         }, 2000);
       } else {
         app.ui.notification(
           "alert",
           response.message,
           "error",
-          document.getElementById("classroom"),
+          document.getElementById("create-classroom").parentElement,
           "create-classroom"
         );
         createClassroomButton.disabled = false;
