--- a/src/views/pages/class/students.ejs
+++ b/src/views/pages/class/students.ejs
@@ -83,6 +83,7 @@
           deleteButton.parentElement.parentElement.remove();
         } else {
           deleteButton.disabled = false;
+          deleteButton.textContent = "Delete";
         }
       };
     };
